--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Mulish", sans-serif;
+  color: #333333;
 }
 
 .container {
@@ -349,4 +350,64 @@ template {
  */
 [hidden] {
   display: none;
+}
+
+.header {
+  background-color: #fff;
+}
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.header__search {
+  margin-right: auto;
+  margin-left: 108px;
+}
+
+.search {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  border-radius: 6px;
+  height: 40px;
+}
+.search__input {
+  font-size: 12px;
+  line-height: 15px;
+  color: #333333;
+  width: 350px;
+  height: 100%;
+  background-color: #F5FAFE;
+  border: none;
+  padding-left: 23px;
+  padding-right: 75px;
+}
+.search__button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 65px;
+  height: 100%;
+  border: none;
+  background-color: #EC1F46;
+}
+
+.user {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+.user__avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.user__name {
+  margin-left: 18px;
+  color: #333333;
 }/*# sourceMappingURL=style.css.map */
