--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,5 +6,9 @@
 @import 'normalize'
 //Стили для блока header
 @import 'blocks/header'
+//Хлебные крошки
+@import 'blocks/breadcrumb'
+//Секция отель
+@import 'blocks/hotel'
 //Подключение media для адаптива
 @import 'media'
